	PR c++/14401 	* class.c (check_field_decls): Complain about non-static data 	members of reference type in unions.  Propagate 	CLASSTYPE_REF_FIELDS_NEED_INIT and 	CLASSTYPE_READONLY_FIELDS_NEED_INIT from the types of non-static 	data members. 	* init.c (perform_member_init): Complain about mbmers with const 	type that are not explicitly initialized.

PR c++/14401
	* g++.dg/init/ctor3.C: New test.
	* g++.dg/init/union1.C: New test.
	* g++.dg/ext/anon-struct4.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@79158 138bc75d-0d04-0410-961f-82ee72b054a4