gcc/testsuite/g++.dg/init/ctor3.C
@@ -1,0 +1,6 @@
+// PR c++/14401
+
+struct S {
+  S() {} // { dg-error "" }
+  const int i;
+};
